grammar.js
		source_file: $ => seq(
			optional($.shebang_line),
			optional($.NLS),
			optional(seq(repeat1($.file_annotation))),
			optional($.package_header),
			repeat($.import_header),
			repeat(seq($._statement, $._semis)),
			optional($._statement)
		),

		file_annotation: $ => seq(
			choice(
				$.AT_NO_WS,
				$.AT_PRE_WS,
			),
			$.FILE,
			optional($.NLS),
			$.COLON,
			optional($.NLS),
			choice(
				seq($.LSQUARE, repeat1($._unescaped_annotation), $.RSQUARE),
				$._unescaped_annotation
			),
			optional($.NLS),
		),

		variable_declaration: $ => seq(
			// repeat($.annotation), TODO
			$.simple_identifier,
			optional(seq(":", $._type))
		),

		property_declaration: $ => seq(
			optional($.modifiers),
			choice("val", "var"),
			optional(seq(
				optional($.NLS),
				$.type_parameters
			)),
			optional(seq(
				optional($.NLS),
				$.receiverTypeWithDot,
			)),
			$.variable_declaration, // TODO: Multi-variable-declaration
			optional($.type_constraints),
			optional(choice(
				seq("=", $._expression),
				$.property_delegate
			)),
			choice(
				seq(
					optional(seq(
						//$.NLS,
						$.semi,
					)),
					optional($.getter),
					optional(seq(
						//optional($.NLS),
						optional($.semi),
						$.setter,
					)),
				),
				seq(
					optional(seq(
						//$.NLS,
						$.semi,
					)),
					optional($.setter),
					optional(seq(
						//optional($.NLS),
						optional($.semi),
						$.getter,
					)),
				),
			)
		),

		_statement: $ => choice(
			$._declaration,
			seq(
				repeat(choice($.label, $.annotation)),
				choice(
					$.assignment,
					$._loop_statement,
					$._expression
				)
			)
		),

		control_structure_body: $ => choice($._block, $._statement),

		_block: $ => seq(
			"{",
			optional(choice(
				seq(optional($.NLS), $.statements),
				$.semis
			)),
			"}",
		),

		for_statement: $ => prec.right(seq(
			"for",
			"(",
			repeat($.annotation),
			choice($.variable_declaration), // TODO: Multi-variable declaration
			"in",
			$._expression,
			")",
			optional($.control_structure_body)
		)),

		_function_literal: $ => choice(
			$.lambda_literal,
			$.anonymous_function
		),

		_expression: $ => $.expression,
		constructor_invocation: $ => $.constructorInvocation,
		_unescaped_annotation: $ => $.unescapedAnnotation,
		simple_identifier: $ => $.simpleIdentifier,
		_type: $ => $.type,
		_semis: $ => $.semis,
		semi: $ => prec.right(choice(seq(";", optional($.NLS)), $.NLS)),
		semis: $ => choice(
			seq(
				repeat($.NLS),
				repeat1(seq(";", repeat($.NLS))),
			),
			repeat1($.NLS)
		),
		//_semis: $ => seq(optional($.NLS), repeat(seq(";", optional($.NLS)))),
		//parameter: $ => "parameter",





		//=================converted from antlr (expressions with some restrictions)==========================





		userType: $ => seq(
			optional(seq(
				$.userType,
				alias($.NLSDOT, $.DOT),
				optional($.NLS)
			)),
			$.simpleUserType,
		),

		simpleUserType: $ => prec.right(seq(
			alias($.simpleIdentifier, $.type_identifier),
			optional(seq(
				//optional($.NLS),
				$.typeArguments
			))
		)),

		expression: $ => $._jumpExpression,

		disjunction: $ => seq(
			$.conjunction,
			repeat(seq(
				//optional($.NLS),
				$.DISJ,
				optional($.NLS),
				$.conjunction,
				optional($.NLS)
			))
		),

		conjunction: $ => seq(
			$.equality,
			repeat(seq(
				//optional($.NLS),
				$.CONJ,
				optional($.NLS),
				$.equality,
		        optional($.NLS)
			))
		),

		equality: $ => seq(
			$.comparison,
			repeat(seq(
				$.equalityOperator,
				optional($.NLS),
				$.comparison
			))
		),

		comparison: $ => seq(
			$.infixOperation,
			optional(seq(
				$.comparisonOperator,
				optional($.NLS),
				$.infixOperation
			))
		),

		infixOperation: $ => seq(
			$.elvisExpression,
			repeat(choice(
				seq(
					$.inOperator,
					optional($.NLS),
					$.elvisExpression
				),
				seq(
					$.isOperator,
					optional($.NLS),
					$.type
				)
			))
		),

		elvisExpression: $ => seq(
			$.infixFunctionCall,
			repeat(seq(
				//optional($.NLS),
				$.elvis,
				optional($.NLS),
				$.infixFunctionCall,
		        optional($.NLS)
			))
		),

		infixFunctionCall: $ => prec.right(seq(
			$.rangeExpression,
			repeat(seq(
				$.simpleIdentifier,
				optional($.NLS),
				$.rangeExpression
			))
		)),

		rangeExpression: $ => seq(
			$.additiveExpression,
			repeat(seq(
				$.RANGE,
				optional($.NLS),
				$.additiveExpression
			))
		),

		additiveExpression: $ => seq(
			$.multiplicativeExpression,
			repeat(seq(
				$.additiveOperator,
				optional($.NLS),
				$.multiplicativeExpression
			))
		),

		multiplicativeExpression: $ => seq(
			$.asExpression,
			repeat(seq(
				$.multiplicativeOperator,
				optional($.NLS),
				$.asExpression
			))
		),

		asExpression: $ => seq(
			$.prefixUnaryExpression,
			optional(seq(
				//optional($.NLS),
				$.asOperator,
				optional($.NLS),
				$.type
			))
		),

		prefixUnaryExpression: $ => seq(
			repeat($.unaryPrefix),
			$.postfixUnaryExpression
		),

		postfixUnaryExpression: $ => seq(
			$.primaryExpression,
			repeat(seq(
				$.postfixUnarySuffix,
			))
		),

		valueArguments: $ => choice(
			seq(
				$.LPAREN,
				optional($.NLS),
				$.RPAREN
			),
			seq(
				$.LPAREN,
				optional($.NLS),
				$.valueArgument,
				repeat(seq(
					optional($.NLS),
					$.COMMA,
					optional($.NLS),
					$.valueArgument
				)),
				optional($.NLS),
				$.RPAREN
			)
		),

		valueArgument: $ => seq(
			optional(seq($.annotation, optional($.NLS))),
			optional(seq(
				$.simpleIdentifier,
				//optional($.NLS),
				$.ASSIGNMENT,
				optional($.NLS)
			)),
			optional(seq($.MULT, optional($.NLS))),
			$.expression
		),

		primaryExpression: $ => choice(
			$.parenthesizedExpression,
			$.simpleIdentifier,
			$.literalConstant,
			$.stringLiteral,
			$.callableReference,
			//$._function_literal,
			//$.object_literal,
			$.collectionLiteral,
			$.thisExpression,
			$.superExpression,
			//$.if_expression,
			//$.when_expression,
			//$.try_expression,
			// jumpExpression was move to the top, see expression rule
		),

		literalConstant: $ => choice(
			$.BooleanLiteral,
			$.IntegerLiteral,
			$.HexLiteral,
			$.BinLiteral,
			$.CharacterLiteral,
			$.RealLiteral,
			$.NullLiteral,
			$.LongLiteral,
			$.UnsignedLiteral
		),

		stringLiteral: $ => choice(
			$.lineStringLiteral,
			$.multiLineStringLiteral
		),

		lineStringLiteral: $ => seq(
			"\"",
			repeat(choice(
				$.lineStringContent,
				$.lineStringExpression,
			)),
			"\"",
		),

		lineStringContent: $ => choice(
			$.LineStrText,
			$.LineStrEscapedChar,
			$.LineStrRef,
		),

		_jumpExpression: $ => prec.right(choice(
			$.disjunction,
			seq(
				$.THROW,
				optional($.NLS),
				$._jumpExpression,
			),
			seq(
				choice(
					$.RETURN,
					$.RETURN_AT,
				),
				optional($._jumpExpression),
			),
			$.CONTINUE,
			$.CONTINUE_AT,
			$.BREAK,
			$.BREAK_AT,
		)),

		additiveOperator: $ => choice(
			$.ADD,
			$.SUB
		),

		simpleIdentifier: $ => prec(PREC.SIMPLE_IDENTIDIER, choice(
			$.Identifier,
			$.ABSTRACT,
			$.ANNOTATION,
			$.BY,
			$.CATCH,
			$.COMPANION,
			$.CONSTRUCTOR,
			$.CROSSINLINE,
			$.DATA,
			$.DYNAMIC,
			$.ENUM,
			$.EXTERNAL,
			$.FINAL,
			$.FINALLY,
			$.GET,
			$.IMPORT,
			$.INFIX,
			$.INIT,
			$.INLINE,
			$.INNER,
			$.INTERNAL,
			$.LATEINIT,
			$.NOINLINE,
			$.OPEN,
			$.OPERATOR,
			$.OUT,
			$.OVERRIDE,
			$.PRIVATE,
			$.PROTECTED,
			$.PUBLIC,
			$.REIFIED,
			$.SEALED,
			$.TAILREC,
			$.SET,
			$.VARARG,
			$.WHERE,
			$.FIELD,
			$.PROPERTY,
			$.RECEIVER,
			$.PARAM,
			$.SETPARAM,
			$.DELEGATE,
			$.FILE,
			$.EXPECT,
			$.ACTUAL,
			$.CONST,
			$.SUSPEND
		)),
