corpus/statements.txt
==================
For statements
==================
for (value in values) {}
---

(source_file 
  (for_statement 
    (WS )
    (variable_declaration 
      (simple_identifier 
        (simpleIdentifier 
          (Identifier ))))
    (WS )
    (WS )
    (expression 
      (disjunction 
        (conjunction 
          (equality 
            (comparison 
              (infixOperation 
                (elvisExpression 
                  (infixFunctionCall 
                    (rangeExpression 
                      (additiveExpression 
                        (multiplicativeExpression 
                          (asExpression 
                            (prefixUnaryExpression 
                              (postfixUnaryExpression 
                                (primaryExpression 
                                  (simpleIdentifier 
                                    (Identifier )))))))))))))))))
    (WS )
    (control_structure_body )))

